change tag menu.python

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         <li class="menu-item menu-item-python">
           <a href="/categories/Python" rel="section">
             
-            menu.python
+            python
           </a>
         </li>
       
