--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 		<li class="menu-item menu-item-python">
           <a href="/mine" rel="section">
             
-            python
+            Mine
           </a>
         </li>
 
