--- a/mine/index.html
+++ b/mine/index.html
@@ -157,15 +157,14 @@
 
 
 
-<h5 id="我负责商城android端项目开发使用mvp开发模式减少项目的耦合使用glide来加载gif动态图">我负责商城Android端项目开发，使用MVP开发模式，减少项目的耦合。使用Glide来加载gif动态图。</h5>
+<p> id="我负责商城android端项目开发使用mvp开发模式减少项目的耦合使用glide来加载gif动态图">我负责商城Android端项目开发，使用MVP开发模式，减少项目的耦合。使用Glide来加载gif动态图。<br>
 
 
 
-<h5 id="遇到需要图片完全填充屏幕时需要在代码中手动设置图片宽度">遇到需要图片完全填充屏幕时，需要在代码中手动设置图片宽度。</h5>
+遇到需要图片完全填充屏幕时，需要在代码中手动设置图片宽度。<br>
 
 
-
-<h2 id="宁波搜油信息科技有限公司-2016年2月-2016年8月">宁波搜油信息科技有限公司 （ 2016年2月 ~ 2016年8月 ）</h2>
+宁波搜油信息科技有限公司 （ 2016年2月 ~ 2016年8月 ）</p>
 
 
 
@@ -173,15 +172,15 @@
 
 
 
-<h5 id="项目涉及论坛模块招聘模块消息模块">项目涉及论坛模块，招聘模块，消息模块</h5>
+<p> 项目涉及论坛模块，招聘模块，消息模块<br>
 
 
 
-<h5 id="运用到了地图定位显示第三方平台登录分享微信支付宝第三方支付七牛图片上传管理友盟数据统计">运用到了地图定位显示，第三方平台登录、分享，微信、支付宝第三方支付，七牛图片上传管理，友盟数据统计。</h5>
+运用到了地图定位显示，第三方平台登录、分享，微信、支付宝第三方支付，七牛图片上传管理，友盟数据统计。<br>
 
 
 
-<h5 id="关于推送的问题采用了集成小米推送和华为推送的方式防止app退出后推送服务不能自启导致无法推送">关于推送的问题，采用了集成小米推送和华为推送的方式，防止App退出后推送服务不能自启导致无法推送。</h5>
+关于推送的问题，采用了集成小米推送和华为推送的方式，防止App退出后推送服务不能自启导致无法推送。</p>
 
 
 
