--- a/mine/index.html
+++ b/mine/index.html
@@ -164,7 +164,7 @@
 遇到需要图片完全填充屏幕时，需要在代码中手动设置图片宽度。<br>
 
 
-宁波搜油信息科技有限公司 （ 2016年2月 ~ 2016年8月 ）</p>
+<h2 id="宁波搜油信息科技有限公司">宁波搜油信息科技有限公司 （ 2016年2月 ~ 2016年8月 ）</h2>
 
 
 
