--- a/mine/index.html
+++ b/mine/index.html
@@ -157,7 +157,7 @@
 
 
 
-<p> id="我负责商城android端项目开发使用mvp开发模式减少项目的耦合使用glide来加载gif动态图">我负责商城Android端项目开发，使用MVP开发模式，减少项目的耦合。使用Glide来加载gif动态图。<br>
+<p> 我负责商城Android端项目开发，使用MVP开发模式，减少项目的耦合。使用Glide来加载gif动态图。<br>
 
 
 
