--- a/word/index.html
+++ b/word/index.html
@@ -90,17 +90,17 @@
 
 	<body onmousewheel="return false;" >
 		<div class="container" style="top: 0%;" >
-			<div class="page" style="display: none;">
+			<div class="page">
 				<CENTER>
 					<p class="sate"/>
-					<img class="pic" src="https://cdn.dribbble.com/users/1520699/screenshots/4802182/ezgif.com-optimize__5__1x.gif"/>
-					<p class="content">内容4内容4内容4内容4内容4</p>
+					<img class="pic" src="image/180717rush.png"/>
+					<p class="content">Happiness is the enemy.It weakens you.Puts doubt in your mind.Suddenly,you have something to lose.</p>
 					<p class="note">
-						<a class="note" href="https://www.baidu.com" target="_blank">
-							-廿八
+						<a class="note" href="https://movie.douban.com/subject/6803494/" target="_blank">
+							《Rush》
 						</a>
 					</p>
-					<p class="time">7.12</p>
+					<p class="time">7.17</p>
 				</CENTER>
 				<img class="next" src="next.png" >
 			</div>
