--- a/word/index.html
+++ b/word/index.html
@@ -94,7 +94,7 @@
 				<CENTER>
 					<p class="sate"/>
 					<img class="pic" src="image/180717rush.png"/>
-					<p class="content">Happiness is the enemy.It weakens you.Puts doubt in your mind.Suddenly,you have something to lose.</p>
+					<p class="content">Happiness is the enemy.<br/>It weakens you.<br/>Puts doubt in your mind.<br/>Suddenly,you have something to lose.</p>
 					<p class="note">
 						<a class="note" href="https://movie.douban.com/subject/6803494/" target="_blank">
 							《Rush》
