了不起的盖茨比

--- a/word/index.html
+++ b/word/index.html
@@ -93,6 +93,20 @@
 			<div class="page">
 				<CENTER>
 					<p class="sate"/>
+					<img class="pic" src="image/180808_gatsby.jpg"/>
+					<p class="content">每当你觉得想要批评什么人的时候，</br>你切要记着，</br>这个世界上的人并非都具备你禀有的条件。</p>
+					<p class="note">
+						<a class="note" href="https://movie.douban.com/subject/3364223/" target="_blank">
+							《了不起的盖茨比》
+						</a>
+					</p>
+					<p class="time">8.8</p>
+				</CENTER>
+				<img class="next" src="next.png" >
+			</div>
+			<div class="page">
+				<CENTER>
+					<p class="sate"/>
 					<img class="pic" src="image/180717rush.png"/>
 					<p class="content">Happiness is the enemy.<br/>It weakens you.<br/>Puts doubt in your mind.<br/>Suddenly,you have something to lose.</p>
 					<p class="note">
